<resources>
    <string name="app_name">EatIt</string>
    <string name="FACEBOOK_APP_ID">161205995285965</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">[ACCOUNT_KIT_CLIENT_TOKEN]</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_cart">Cart</string>

    <string name="home_second">Home Second</string>
    <string name="popular_categories">Popular categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="menu_category">Categories</string>
    <string name="food_list">Food List</string>
    <string name="food_details">Food Details</string>
    <string name="food_name">Food Name</string>
    <string name="description">Description</string>
    <string name="show_comment">Show Comment</string>
    <string name="size">Size</string>
    <string name="addon">AddOn</string>
    <string name="search">Search</string>
    <string name="empty_cart">EMPTY CART</string>
    <string name="total_0_0">Total: 0,0</string>
    <string name="place_order">Place Order</string>
    <string name="cart">Cart</string>
    <string name="action_clear_cart">Clear Cart</string>
    <string name="sign_out">Sign out</string>
    <string name="enter_youy_address">Enter Youy Address</string>
    <string name="home_address">Home Address</string>
    <string name="other_address">Other Address</string>
    <string name="ship_to_this_address">Ship To This Address</string>
    <string name="delivary_methods">Delivary Methods</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="cash_on_delivary">Cash On Delivary</string>
    <string name="braintree">Braintree</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="menu_view_orders">View Orders</string>
    <string name="action_search">Search</string>
</resources>
