<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.qadomy.eatit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.qadomy.eatit.ui.menu.MenuFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.qadomy.eatit.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_foodList"
        android:name="com.qadomy.eatit.ui.foodlist.FoodListFragment"
        android:label="@string/food_list"
        tools:layout="@layout/food_list_fragment" />

    <fragment
        android:id="@+id/nav_food_details"
        android:name="com.qadomy.eatit.ui.fooddetails.FoodDetailsFragment"
        android:label="@string/food_details"
        tools:layout="@layout/food_details_fragment" />
</navigation>