<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/eight_dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brandon_medium">

        <EditText
            android:id="@+id/order_edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:fontFamily="@font/brandon_medium"
            android:hint="@string/enter_youy_address"
            android:inputType="text"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/brandon_medium"
        android:text="@string/delivary_methods"
        android:textColor="@color/dialog_header_collor"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rdi_home_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/home_address"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/rdi_other_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/other_address"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/rdi_ship_this_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/ship_to_this_address"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />


    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/brandon_medium"
        android:text="@string/payment_methods"
        android:textColor="@color/dialog_header_collor"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rdi_cod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/cash_on_delivary"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/rdi_braintree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/braintree"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />

    </RadioGroup>

</LinearLayout>